<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_produk2"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    tools:context="com.contoh.rachgunawan.Produk2Activity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:adjustViewBounds="true"
                android:src="@drawable/produk2"
                android:scaleType="fitXY"/>
        </FrameLayout>
        <TextView
            style="@style/TextContent.Black"
            android:textSize="32sp"
            android:text="@string/harga2"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:layout_marginBottom="8dp"/>
        <TextView
            style="@style/TextContent.Subtitle"
            android:text="@string/stock2"
            android:textColor="@color/colorRed"
            android:layout_marginBottom="@dimen/activity_vertical_margin"/>

        <TextView
            style="@style/TextContent.Subtitle"
            android:text="@string/spesifikasi"
            android:textColor="@color/colorBlue"
            android:textSize="20sp"
            android:layout_marginBottom="8dp"/>
        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:layout_marginRight="@dimen/activity_horizontal_margin"
            android:layout_marginBottom="@dimen/activity_vertical_margin">
            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp">
                <TextView
                    style="@style/TextSpec.Field"
                    android:text="@string/deskripsi"/>

                <TextView
                    style="@style/TextSpec.Value"
                    android:text="@string/spesifikasi_deskripsi2"
                    android:id="@+id/textView2" />
            </TableRow>
            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp">
                <TextView
                    style="@style/TextSpec.Field"
                    android:text="@string/Warna"/>

                <TextView
                    style="@style/TextSpec.Value"
                    android:text="@string/warna_tersedia2"
                    android:id="@+id/textView" />
            </TableRow>
            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp">
                <TextView
                    style="@style/TextSpec.Field"
                    android:text="@string/size"/>
                <TextView
                    style="@style/TextSpec.Value"
                    android:text="@string/ukuran2"/>
            </TableRow>

        </TableLayout>
        <TextView
            style="@style/TextContent.Subtitle"
            android:text="@string/dijual_oleh"
            android:layout_marginBottom="8dp"/>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:layout_marginRight="@dimen/activity_horizontal_margin"
            android:layout_marginBottom="@dimen/activity_vertical_margin">
            <de.hdodenhof.circleimageview.CircleImageView
                android:layout_width="56dp"
                android:layout_height="56dp"
                android:src="@drawable/nawan_01"
                android:layout_centerVertical="true"
                android:id="@+id/profile_image"
                android:layout_marginRight="@dimen/activity_horizontal_margin"/>
            <TextView
                style="@style/TextContent"
                android:layout_toRightOf="@id/profile_image"
                android:text="@string/rachmat_gunawan"
                android:layout_centerVertical="true"/>
        </RelativeLayout>
        <Button
            android:id="@+id/btnBeli"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:layout_marginRight="@dimen/activity_horizontal_margin"
            android:layout_marginBottom="@dimen/activity_vertical_margin1"
            style="@style/ButtonGeneral"
            android:text="Beli"/>
        <Button
            android:id="@+id/btnKembali"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:layout_marginRight="@dimen/activity_horizontal_margin"
            android:layout_marginBottom="@dimen/activity_vertical_margin"
            android:text="Kembali" />
    </LinearLayout>
</ScrollView>